--- a/.codeql.yml
+++ b/.codeql.yml
@@ -42,7 +42,7 @@ jobs:
 - job: codeql
   displayName: CodeQL
   pool:
-    name: NetCore1ESPool-Internal
+    name: NetCore1ESPool-Svc-Internal
     demands: ImageOverride -equals windows.vs2019.amd64
   timeoutInMinutes: 90
 
