--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -6,7 +6,7 @@
     <IsTestProject>true</IsTestProject>
     <TargetFrameworkVersion
         Condition=" '$(MSBuildProjectName)' != 'Microsoft.TestCommon' AND
-          '$(MSBuildProjectName)' != 'System.Net.Http.Formatting.NetCore.Test' AND
-          '$(MSBuildProjectName)' != 'System.Net.Http.Formatting.NetStandard.Test' ">v4.6.2</TargetFrameworkVersion>
+          '$(MSBuildProjectName)' != 'System.Net.Http.Formatting.ns1_3.Test' AND
+          '$(MSBuildProjectName)' != 'System.Net.Http.Formatting.ns2_0.Test' ">v4.6.2</TargetFrameworkVersion>
   </PropertyGroup>
 </Project>
